--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 	  </tr>
 	  <tr>
 	    <td colspan=2>
-    <textarea id="root" name="root">
-    </textarea>
+	      <pre><div id="root-table-scroll">Root</div></pre>
+	      <textarea id="root" name="root" rows="1">Root</textarea>
 	    </td>
-	  </tr>	  
+	  </tr>
 	</table>
 	</td>
 	<td>
-    <select id="allroots" name="allroots" size=30
+	  <select id="allroots" name="allroots" size=30
 	    onChange="showUpdate(this, pieroot, roothistory)" >
-      </select>
+	  </select>
 	</td>
       </tr>
       <tr>
