--- a/index.html
+++ b/index.html
@@ -24,69 +24,100 @@
     <div class="main">
     <table>
       <tr>
+	<!-- left -->
 	<td>
-    <select id="allfirstroots" name="allfirstroots" size=20
+	  <div>
+    <select id="allfirstroots" name="allfirstroots" size=22
 	    onChange="showUpdate(this, pieroot, roothistory)" >
-      </select>
+    </select>
+	  </div>
 	</td>
+	<!-- center -->
 	<td>
-	<table>
-	  <tr>
-	    <td>
+	  <table>
+	    <!-- top -->
+	    <tr>
+	      <td colspan=1>
+		<div>
     <select id="groups" name="groups"
 	    onChange="listGroupRoots(this)" >
     </select>
     <select id="docs" name="docs"
 	    onChange="showUpdate(this, pieroot, roothistory)" >
     </select>
-	    </td>
-	    <td>
-	    </td>
-	  </tr>
-	  <tr>
-	    <td colspan=2>
-	      <div id="root-table-scroll">Root</div>
-	      <textarea id="root" name="root" rows="1">Root</textarea>
-	    </td>
-	  </tr>
-	</table>
+		</div>
+	      </td>
+	      <td colspan=1>
+		<div>
+		  <select id="keyword-ielanguage"
+			  onchange="showKeywords(this)"/>
+		</div>
+	      </td>
+	    </tr>
+	    <!-- bottom -->
+	    <tr>
+	      <td colspan=1>
+		<div id="root-table-scroll">Root</div>
+	      </td>
+	      <td colspan=1>
+		<div id="keyword-table-scroll">Keyword</div>
+	      </td>
+	    </tr>
+	  </table>
 	</td>
+	<!-- right -->
 	<td>
 	  <select id="allroots" name="allroots" size=35
 	    onChange="showUpdate(this, pieroot, roothistory)" >
 	  </select>
 	</td>
       </tr>
+      <!-- bottom -->
       <tr>
 	<td colspan=2 valign="top">
+	  <table>
+	    <tr>
+	      <td>
+		<div>
 	  <form>
 	  <select id="ielanguage"/>
-	  <input id="iekeyword" width="15" value="keyword"/>
-	  <input id="pieroot" width="25"/>
-	  <input id="note" width="15"/>
-	  <button id="save" onclick="saveKeyword(); return false;"> save </button>
-	  </form>
-	</td>
-	<td colspan=1 class="cell-memo">
-	  <form>
-	    <table>
-	      <tr class="cell-memo">
-		<td>
-	  <select id="roothistory" size="20" width="100%"
+	  <input id="iekeyword" size="10" value="keyword" /><br/>
+	  pie: <input id="pieroot" size="15"/><br/>
+	  <input id="note" size="19" placeholder="note"><br/>
+	  <button id="save" onclick="saveKeyword(); return false;">save</button>	  </form>
+		</div>
+	      </td>
+	      <td class="cell-memo">
+	      </td>
+	      <td class="cell-memo">
+		<div>
+		  <table>
+		    <tr>
+		      <td class="cell-memo">
+	  <select id="roothistory" size="5" width="100%"
 		  onChange="pieroot.value=showRootContent(this, pieroot.value)" />
-		</td>
-		<td>
-	  <input id="session" value="session"/>
+		      </td>
+		      <td class="cell-memo">
+	  <form>
+	  <input id="session" value="session" onchange="loadMemoRoots();"/></br>
+	  <button id="memo" onclick="saveMemoRoots(); return false;"> memo </button>
 	  <script>
 	    var session = "" + new Date().toISOString() + "-session";
 	    document.getElementById("session").value = session;
 	  </script>
-	  <div/>
-	  <button id="memo" onclick="saveMemoRoots(); return false;"> memo </button>
-		</td>
-	      </tr>
-	    </table>
 	  </form>
+		      </td>
+		    </tr>
+		  </table>		 
+		</div>
+	      </td>
+	      <td class="cell-memo">
+	      </td>
+	    </tr>
+	  </table>	  
+	</td>
+	<td colspan=1 class="todo_bottom-right">
+	  <!-- bottom right -->
 	</td>
       </tr>
     </table>
