--- a/index.html
+++ b/index.html
@@ -119,11 +119,15 @@
           <div id="sync-error">There was a problem syncing</div>
 	</div>
 	      </td>
+	      <td colspan=1 class="cell-memo">
+		<textarea rows=6 id="div_log">Log:</textarea>
+	      </td>
 	    </tr>
 	  </table>	  
 	</td>
-	<td colspan=1 class="todo_bottom-right">
+	<td colspan=1 class="cell-memo">
 	  <!-- bottom right -->
+
 	</td>
       </tr>
     </table>
