--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 
     <div class="main">
       <table>
-	<tr><td colspan=2 align=center>
-	    <span id="sync-wrapper">
-          <div id="sync-success">Currently syncing</div>
-          <div id="sync-error">There was a problem syncing</div>
-	</span>!</td>
+	<tr>
+	  <td colspan=2 align=center>
+	    <div id="sync-wrapper">
+              <span id="sync-success">Currently syncing</span>
+              <span id="sync-error">There was a problem syncing</span>!
+	    </div>
+	  </td>
 	</tr>
 	<tr>
 	  <!-- left -->
