handle german meaning link

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     
 	    <button id="memo"
 		    onclick="saveMemoRoots(); return false;"> memo </button>
-	    <input type="hidden" id="sessionSelection"/>	    
+	    <input type="text" id="sessionSelection"/>	    
 	  <script>
 	    var session = "" + new Date().toISOString() + "-session";
 	    document.getElementById("sessionSelection").value = session;
